fix align hotel main

--- a/src/styles/components/theme-template.scss
+++ b/src/styles/components/theme-template.scss
@@ -225,11 +225,12 @@
         @include col;
         background-color: white;
         border-radius: 10px;
-        overflow: hidden;
+        //overflow: hidden;
         filter: drop-shadow(0px 6px 21px rgba(0, 0, 0, 0.14));
         height: 450px;
         margin-right: 30px;
         cursor: pointer;
+
         &_img {
             // @include image-bg;
             object-fit: cover;
@@ -257,6 +258,7 @@
 
         &_subtitle {
             font-size: 22px;
+            min-width: 215px;
         }
 
         &_price {
@@ -365,6 +367,7 @@
         &_subtitle {
             margin-bottom: 9px;
             width: 100%;
+            min-width: 130px;
         }
 
         &_subtitle, &_price {
